--- a/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
+++ b/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
@@ -435,6 +435,8 @@ head(gemm_data, n = 20)
 
 ## Composition comparison plots
 ### Age composition ccomparisons (NWFSC.Combo only)
+Both of these use csv files that were formatted to input in the SAC tool with different numbered fleets to represent the years but 
+you could easily extract data from the previous assessment and rbind it with the updated data. The big thing you would want is 
 ```{r}
 nwfsc_ages<-read.csv(file.path(getwd(), "NWFSC.Combo_plots", "nwfsc.combo_comparison_ages.csv"))
 
@@ -512,7 +514,7 @@ comparison_plot <- together |>
                    ggplot2::geom_point(position=position_dodge(0.5))
 ggsave(plot = comparison_plot, "nwfsc_length_comp_comparisons.png", path = file.path(getwd(), "NWFSC.Combo_plots"))
 
-
+## Triennial length compositions
 tri_lengths <- read.csv(file.path(getwd(), "Tri_plots", "triennial_comparison_lengths.csv"))
 long_tri_lengths <- tri_lengths |>
               dplyr::mutate(type = dplyr::case_when(Fleet == 1 ~ "previous assessment",
